--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,6 +1,6 @@
 ##process this file with automake to produce Makefile.in
 
-SUBDIRS = optimistic systematic
+SUBDIRS = optimistic straight systematic
 
 INCLUDES=-I@LIBXML2_INCL_DIR@ -I.
 
@@ -11,5 +11,5 @@ sefirainc_HEADERS = answer.hh compare.hh compareimpl.hh envelope.hh nodeindex.hh
 
 libsefira_la_SOURCES = answer.cc compare.cc program.cc relresult.cc xbuffer.cc xdoc.cc xutil.cc
 
-libsefira_la_LDFLAGS = -rpath $(libdir) -version-info 1:0:0 optimistic/liboptimistic.la systematic/libsystematic.la -lxml2 -lstdc++
+libsefira_la_LDFLAGS = -rpath $(libdir) -version-info 1:0:0 optimistic/liboptimistic.la straight/libstraight.la systematic/libsystematic.la -lxml2 -lstdc++
 
