extended TreeTable, removed duplicate parameter in systematic fill

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -9,7 +9,7 @@ lib_LTLIBRARIES = libsefira.la
 sefiraincdir = $(pkgincludedir)
 sefirainc_HEADERS = answer.hh compare.hh compareimpl.hh envelope.hh nodeindex.hh program.hh relresult.hh trace.hh xbuffer.hh xdoc.hh xutil.hh treetable.hh
 
-libsefira_la_SOURCES = answer.cc compare.cc program.cc relresult.cc xbuffer.cc xdoc.cc xutil.cc
+libsefira_la_SOURCES = answer.cc compare.cc program.cc relresult.cc treetable.cc xbuffer.cc xdoc.cc xutil.cc
 
 libsefira_la_LDFLAGS = -rpath $(libdir) -version-info 1:0:0 optimistic/liboptimistic.la straight/libstraight.la systematic/libsystematic.la -lxml2 -lstdc++
 
