--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -4,14 +4,14 @@ INCLUDES=-I@LIBXML2_INCL_DIR@ -I../lib
 
 bin_PROGRAMS = sefira-optimistic sefira-straight sefira-systematic
 
-sefira_optimistic_SOURCES = optimistic.cc optprog.cc optprog.hh
+sefira_optimistic_SOURCES = optimistic.cc
 
 sefira_optimistic_LDADD = ../lib/libsefira.la -lxml2 -lstdc++
 
-sefira_straight_SOURCES = straight.cc strprog.cc strprog.hh
+sefira_straight_SOURCES = straight.cc
 
 sefira_straight_LDADD = ../lib/libsefira.la -lxml2 -lstdc++
 
-sefira_systematic_SOURCES = systematic.cc sysprog.cc sysprog.hh
+sefira_systematic_SOURCES = systematic.cc
 
 sefira_systematic_LDADD = ../lib/libsefira.la -lxml2 -lstdc++
