--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -7,7 +7,7 @@ INCLUDES=-I@LIBXML2_INCL_DIR@ -I.
 lib_LTLIBRARIES = libsefira.la
 
 sefiraincdir = $(pkgincludedir)
-sefirainc_HEADERS = answer.hh compare.hh compareimpl.hh envelope.hh nodeindex.hh program.hh relresult.hh trace.hh xbuffer.hh xdoc.hh xutil.hh treetable.hh
+sefirainc_HEADERS = app.hh answer.hh compare.hh compareimpl.hh envelope.hh nodeindex.hh program.hh relresult.hh trace.hh xbuffer.hh xdoc.hh xutil.hh treetable.hh
 
 libsefira_la_SOURCES = answer.cc compare.cc program.cc relresult.cc treetable.cc xbuffer.cc xdoc.cc xutil.cc
 
