--- a/testdata/straight/Makefile.am
+++ b/testdata/straight/Makefile.am
@@ -1,4 +1,4 @@
 ## Process this file with automake to produce Makefile.in
 
-EXTRA_DIST = 00d.xml 01d.xml 02d.xml 03d.xml 04d.xml 05d.xml 06d.xml 07d.xml 08d.xml 09d.xml 10d.xml 11d.xml 12d.xml 13d.xml 14d.xml 15d.xml 16d.xml 17d.xml 18d.xml 19d.xml 20d.xml 21d.xml 22d.xml 23d.xml 24d.xml 25d.xml 26d.xml 27d.xml 28d.xml 29d.xml 30d.xml 31d.xml 32d.xml 33d.xml 34d.xml 35d.xml 36d.xml 37d.xml 38d.xml 39d.xml 40d.xml
+EXTRA_DIST = 00d.xml 01d.xml 02d.xml 03d.xml 04d.xml 05d.xml 06d.xml 07d.xml 08d.xml 09d.xml 10d.xml 11d.xml 12d.xml 13d.xml 14d.xml 15d.xml 16d.xml 17d.xml 18d.xml 19d.xml 20d.xml 21d.xml 22d.xml 23d.xml 24d.xml 25d.xml 26d.xml 27d.xml 28d.xml 29d.xml 30d.xml 31d.xml 32d.xml 33d.xml 34d.xml 35d.xml 36d.xml 37d.xml 38d.xml 39d.xml 40d.xml 41d.xml
 
