simplest plastic tests pass

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -2,13 +2,17 @@
 
 INCLUDES=-I@LIBXML2_INCL_DIR@ -I../lib
 
-bin_PROGRAMS = sefira-optimistic sefira-straight sefira-systematic
+bin_PROGRAMS = sefira-optimistic sefira-plastic sefira-straight sefira-systematic
 
 noinst_PROGRAMS = sizetree
 
 sefira_optimistic_SOURCES = optimistic.cc
 
 sefira_optimistic_LDADD = ../lib/libsefira.la -lxml2 -lstdc++
+
+sefira_plastic_SOURCES = plastic.cc
+
+sefira_plastic_LDADD = ../lib/libsefira.la -lxml2 -lstdc++
 
 sefira_straight_SOURCES = straight.cc
 
