--- a/lib/straight/Makefile.am
+++ b/lib/straight/Makefile.am
@@ -4,7 +4,7 @@ INCLUDES=-I@LIBXML2_INCL_DIR@ -I. -I..
 
 noinst_LTLIBRARIES = libstraight.la
 
-libstraight_la_SOURCES = builder.cc forrest.cc itreeanno.cc lcsmemo.cc treeanno.cc treeiter.cc treeiterletter.cc
+libstraight_la_SOURCES = builder.cc itreeanno.cc lcsmemo.cc treeanno.cc treeiter.cc treeiterletter.cc
 
 straightincdir = $(pkgincludedir)/straight
-straightinc_HEADERS = builder.hh forrest.hh itreeanno.hh lcsmemo.hh nodeanno.hh treeanno.hh treeiter.hh treeiterletter.hh
+straightinc_HEADERS = builder.hh itreeanno.hh lcsmemo.hh nodeanno.hh treeanno.hh treeiter.hh treeiterletter.hh
